--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button class="navbar-toggler border-0 me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCumulus">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse show" id="navbarCumulus">
+      <div class="collapse navbar-collapse" id="navbarCumulus">
         <ul class="navbar-nav bg-transparent d-flex flex-row">
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Home</a>
