--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
     </div>
   </a>
 </div>
-
-<section id="about" class="about-section py-5">
+<section id="about">
+  <br>
+</section>
+<section  class="about-section py-5">
   <div class="container text-center">
     <h2 class="fw-bold mb-4">About Cumulus</h2>
     <p class="lead mb-3">Cumulus is built entirely with <strong>SwiftUI</strong>, the modern declarative UI framework from Apple.</p>
