--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="container text-center">
     <h2 class="fw-bold mb-4">About Cumulus</h2>
     <p class="lead mb-3">Cumulus is built entirely with <strong>SwiftUI</strong>, the modern declarative UI framework from Apple.</p>
-    <p class="lead mb-3">It integrates <strong>Apple WeatherKit</strong> for fast, accurate, and hyperlocal forecasts — straight from the source.</p>
+    <p class="lead mb-3">It integrates <strong>Apple WeatherKit</strong> for fast, accurate, and hyperlocal forecasts  straight from the source.</p>
     <p class="lead mb-3">Cumulus is fully optimized for <strong>iOS, iPadOS, and macOS</strong>, providing a seamless experience across all your Apple devices.</p>
     <p class="lead mb-3">No accounts. No ads. No subscriptions. Just weather.</p>
     <p class="lead fw-semibold ">Cumulus is 100% free — and always will be.</p>
@@ -127,7 +127,7 @@
           <div class="card-body text-white">
             <img src="src/location.png" alt="Location Icon" class="mb-3" style="width: 50px; height: 50px;">
             <h5 class="card-title">Location Stays Local</h5>
-            <p class="card-text">Your location is only used to fetch weather — and never leaves your device.</p>
+            <p class="card-text">Your location is only used to fetch weather and never leaves your device.</p>
           </div>
         </div>
       </div>
