--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p class="lead mb-3">It integrates <strong>Apple WeatherKit</strong> for fast, accurate, and hyperlocal forecasts  straight from the source.</p>
     <p class="lead mb-3">Cumulus is fully optimized for <strong>iOS, iPadOS, and macOS</strong>, providing a seamless experience across all your Apple devices.</p>
     <p class="lead mb-3">No accounts. No ads. No subscriptions. Just weather.</p>
-    <p class="lead fw-semibold ">Cumulus is 100% free — and always will be.</p>
+    <p class="lead fw-semibold ">Cumulus is 100% free and always will be.</p>
 
     <div class="row justify-content-center mt-4">
       <div class="col-md-4 mb-3">
@@ -109,7 +109,7 @@
   <div class="container text-center">
     <h2 class="fw-bold mb-4">Privacy Policy</h2>
     <p class="lead mb-3">Cumulus puts your privacy first. Always.</p>
-    <p class="mb-4">We don’t collect, store, or transmit any personal data. Everything stays on your device — just as it should.</p>
+    <p class="mb-4">We don’t collect, store, or transmit any personal data. Everything stays on your device, just as it should.</p>
     <p class="lead fw-semibold mt-4">There is no account. No syncing. No risk. Just weather.</p>
     <div class="row justify-content-center">
       <div class="col-md-4 mb-3">
