--- a/index.html
+++ b/index.html
@@ -58,9 +58,18 @@
     </div>
   </a>
 </div>
+<br>
+<br>
+<br>
 <section id="about">
   <br>
 </section>
+<section id="photos">
+  <img src="src\sc1.png" alt="Screenshot 1" class="screenshot">
+  <img src="src\sc2.png" alt="Screenshot 2" class="screenshot"> 
+  <img src="src\sc3.png" alt="Screenshot 3" class="screenshot">
+</section>
+
 <section  class="about-section py-5">
   <div class="container text-center">
     <h2 class="fw-bold mb-4">About Cumulus</h2>
