--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cumulus | Simple. Clean. Weather.</title>
+  <title>Cumulus</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="src\favico.png">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent fixed-top mt-3 me-3" style="z-index: 1030;">
