full stop :sob:

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section class="intro-section py-5">
   <div class="container text-center">
     <img src="src/logo.png" alt="Cumulus Icon" class="app-icon">
-    <h1 class="fw-bold">Simple. Clean. Weather</h1>
+    <h1 class="fw-bold">Simple. Clean. Weather.</h1>
     <p class="fs-4">iOS | iPadOS | MacOS</p>
     <br>
     <br>
