--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <title>Cumulus</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="src\favico.png">
-
+  <link rel="icon" type="image/png" href="/src/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+  <link rel="shortcut icon" href="/src/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/apple-touch-icon.png" />
+  <link rel="manifest" href="/src/site.webmanifest" />
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent fixed-top mt-3 me-3" style="z-index: 1030;">
@@ -73,7 +76,6 @@
   <img src="src\sc2.png" alt="Screenshot 2" class="screenshot"> 
   <img src="src\sc3.png" alt="Screenshot 3" class="screenshot">
 </section>
-
 <section  class="about-section py-5">
   <div class="container text-center">
     <h2 class="fw-bold mb-4">About Cumulus</h2>
@@ -116,7 +118,6 @@
     </div>
   </div>
 </section>
-
 
 <section id="privacy" class="privacy-section py-5">
   <div class="container text-center">
