--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <li class="nav-item">
             <a class="nav-link text-white"href="mailto:JoshCumulus@proton.me?subject=Contacting%20Cumulus&body=Hi%2C%20I%20have%20a%20question...">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white"href="https://testflight.apple.com/join/3FTY37Fg">iOS 26 Beta</a>
+          </li>
         </ul>
       </div>
     </div>
   </div>
 </nav>
-
-
-
 
   </div>
   <section class="intro-section py-5">
@@ -52,7 +52,7 @@
     <br>
     <button class="download-btn">
     <a href="https://apps.apple.com/us/app/cumulus/id6742735497" target="_blank" rel="noopener noreferrer">Download</a>
-    </button>
+   
   </div>
   </section>
 
