--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       <img src="src/logo.png" alt="Cumulus Icon" class="app-icon floating always-visible">
       <h1 class="hero-title always-visible">Simple. Clean.<br><span class="text-gradient always-visible">Weather.</span></h1>
       <p class="hero-subtitle always-visible">Experience weather forecasting like never before on iOS, WatchOS, iPadOS & MacOS</p>
-      <a href="https://apps.apple.com/us/app/cumulus/id6742735497" target="_blank" class="download-btn always-visible">
+      
+      <a href="https://apps.apple.com/us/app/cumulus/id6742735497" target="_blank" class="download-btn ">
         <i class="bi bi-apple"></i>
         Download
       </a>
-       <a href="https://testflight.apple.com/join/3FTY37Fg" target="_blank" class="download-btn always-visible">
+       <a href="https://testflight.apple.com/join/3FTY37Fg" target="_blank" class="download-btn ">
         <i class="bi bi-apple"></i>
         Testflight Beta
       </a>
