--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:title" content="Cumulus - Beautiful Weather for iOS">
   <meta property="og:description" content="Experience weather forecasting like never before with our Vision OS inspired design on iOS, iPadOS, WatchOS and macOS.">
   <meta property="og:type" content="website">
-  <meta name="apple-itunes-app" content="app-id=id6742735497">
+  <meta name="apple-itunes-app" content="app-id=id6742735497, app-argument=ios">
   
 </head>
 <body>
